@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import jakarta.annotation.PostConstruct;
 import jakarta.enterprise.context.ApplicationScoped;
@@ -167,8 +166,7 @@ public class KeycloakAdminService {
         var targetDomain = KeycloakUtil.getDomainFromIssuer(roleAssignmentRequestDTO.getIssuer());
         var availableRoles = keycloakClients.get(targetProviderKey).realm(targetDomain).roles().list();
         List<RoleRepresentation> targetRoles = availableRoles.stream()
-                .filter(role -> roleAssignmentRequestDTO.getNames().contains(role.getName()))
-                .collect(Collectors.toList());
+                .filter(role -> roleAssignmentRequestDTO.getNames().contains(role.getName())).toList();
         if (!targetRoles.isEmpty()) {
             keycloakClients.get(targetProviderKey).realm(targetDomain).users().get(userId).roles()
                     .realmLevel().add(targetRoles);
